massive users implementation

--- a/app/assets/javascripts/templates/application.handlebars
+++ b/app/assets/javascripts/templates/application.handlebars
@@ -1,3 +1,7 @@
 <div class="container main">
+  {{#link-to 'main'}}<h1>Ember Store</h1>{{/link-to}}
+
+  {{#link-to 'user'}}<p>Login</p>{{/link-to}}
+
   {{ outlet }}
 </div>
