--- a/app/assets/javascripts/templates/cnpj_user.handlebars
+++ b/app/assets/javascripts/templates/cnpj_user.handlebars
@@ -1,8 +1,8 @@
-<form>
+<form {{action 'create' this on='submit'}}>
   <p>
   {{input type="text" name="cnpj" placeholder="CNPJ"}}
   </p>
-  
+
   <p>
   {{input type="text" name="fantasyName" placeholder="Fantasy Name"}}
   </p>
