--- a/app/assets/javascripts/templates/cpf_user.handlebars
+++ b/app/assets/javascripts/templates/cpf_user.handlebars
@@ -1,26 +1,26 @@
-<form>
+<form {{action 'create' this on='submit'}}>
   <p>
-  {{input type="text" name="cpf" placeholder="CPF"}}
+  {{input type="text" value=cpf placeholder="CPF"}}
   </p>
 
   <p>
-  {{input type="text" name="fullName" placeholder="Full Name"}}
+  {{input type="text" value=full_name placeholder="Full Name"}}
   </p>
 
   <p>
-  {{input type="text" name="phone" placeholder="Phone"}}
+  {{input type="text" value=phone placeholder="Phone"}}
   </p>
 
   <p>
-  {{input type="text" name="eMail" placeholder="E-mail"}}
+  {{input type="text" value=e_mail placeholder="E-mail"}}
   </p>
 
   <p>
-  {{input type="text" name="address" placeholder="Address"}}
+  {{input type="text" value=address placeholder="Address"}}
   </p>
 
   <p>
-  {{input type="text" name="password" placeholder="Password"}}
+  {{input type="password" value=password placeholder="Password"}}
   </p>
 
 
