--- a/app/assets/javascripts/templates/cnpj_user.handlebars
+++ b/app/assets/javascripts/templates/cnpj_user.handlebars
@@ -1,38 +1,38 @@
 <form {{action 'create' this on='submit'}}>
   <p>
-  {{input type="text" name="cnpj" placeholder="CNPJ"}}
+  {{input type="text" value=cnpj placeholder="CNPJ"}}
   </p>
 
   <p>
-  {{input type="text" name="fantasyName" placeholder="Fantasy Name"}}
+  {{input type="text" value=fantasy_name placeholder="Fantasy Name"}}
   </p>
 
   <p>
-  {{input type="text" name="stateRegistration" placeholder="I.E."}}
+  {{input type="text" value=state_registration placeholder="I.E."}}
   </p>
 
   <p>
-  {{input type="text" name="fullName" placeholder="Full Name"}}
+  {{input type="text" value=full_name placeholder="Full Name"}}
   </p>
 
   <p>
-  {{input type="text" name="phone" placeholder="Phone"}}
+  {{input type="text" value=phone placeholder="Phone"}}
   </p>
 
   <p>
-  {{input type="text" name="eMail" placeholder="E-mail"}}
+  {{input type="text" value=e_mail placeholder="E-mail"}}
   </p>
 
   <p>
-  {{input type="text" name="address" placeholder="Address"}}
+  {{input type="text" value=address placeholder="Address"}}
   </p>
 
   <p>
-  {{input type="text" name="transporter" placeholder="Transporter"}}
+  {{input type="text" value=transporter placeholder="Transporter"}}
   </p>
 
   <p>
-  {{input type="text" name="password" placeholder="Password"}}
+  {{input type="text" value=password placeholder="Password"}}
   </p>
 
   <p><button>Send</button></p>
