changes login parameter

--- a/app/assets/javascripts/templates/user.handlebars
+++ b/app/assets/javascripts/templates/user.handlebars
@@ -1,5 +1,5 @@
 <form>
-  {{input type="text" name="eMail" placeholder="E-mail"}}
+  {{input type="text" name="e_mail" placeholder="E-mail"}}
   {{input type="text" name="password" placeholder="Password"}}
 
   <button>Login</button>
